--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                 <div class="thumbs">
                     <div class="prev"></div>
-                    <div class="next"></div>
+                    <div class="next" @click="goNext"></div>
                     <div class="thumb active">
                         <img src="img/01.jpg" alt="Svezia"/>
                     </div>
