--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
                 <div class="thumbs">
                     <div class="prev" @click="goPrev"></div>
                     <div class="next" @click="goNext"></div>
-                    <div class="thumb active">
+                    <div @click="goOn0" class="thumb active">
                         <img src="img/01.jpg" alt="Svezia"/>
                     </div>
-                    <div class="thumb">
+                    <div @click="goOn1" class="thumb">
                         <img src="img/02.jpg" alt="Svizzera" />
                     </div>
-                    <div class="thumb">
+                    <div @click="goOn2" class="thumb">
                         <img src="img/03.jpg" alt="Gran Bretagna" />
                     </div>
-                    <div class="thumb">
+                    <div @click="goOn3" class="thumb">
                         <img src="img/04.jpg" alt="Germania" />
                     </div>
-                    <div class="thumb">
+                    <div @click="goOn4" class="thumb">
                         <img src="img/05.jpg" alt="Paradise" />
                     </div>
                 </div>
