--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container" >
             <div class="slider-wrapper" tabindex="0">
 
-                <div class="item">
+                <div class="item" @mouseover="stopAuto" @mouseleave="autoplay">
                     <img :src="images[active].image" :alt="images[active].title" />
                     <div class="text">
                         <h3> {{images[active].title}} </h3>
