--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div id="app">
 
         <div class="container" >
-            <div class="slider-wrapper" tabindex="0">
+            <div class="slider-wrapper" tabindex="0" @mouseover="stopAuto" @mouseleave="autoplay">
 
-                <div class="item" @mouseover="stopAuto" @mouseleave="autoplay">
+                <div class="item">
                     <img :src="images[active].image" :alt="images[active].title" />
                     <div class="text">
                         <h3> {{images[active].title}} </h3>
@@ -29,7 +29,7 @@
                 <div class="thumbs">
                     <div class="prev" @click="goPrev"></div>
                     <div class="next" @click="goNext"></div>
-                    <div @click="goOn0" class="thumb active">
+                    <!-- <div @click="goOn0" class="thumb active">
                         <img src="img/01.jpg" alt="Svezia"/>
                     </div>
                     <div @click="goOn1" class="thumb">
@@ -43,7 +43,11 @@
                     </div>
                     <div @click="goOn4" class="thumb">
                         <img src="img/05.jpg" alt="Paradise" />
-                    </div>
+                    </div> -->
+                    
+                    <!-- Aggiunge le thumbs -->
+                    <div v-for="(image, index) in images" class="thumb" :style="`background-image: url('${images[index].image}')`" @click="goOnIndex(index)"></div>
+                    
                 </div>
 
             </div>
